Fix: scrollbar

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -11,7 +11,9 @@ body {
   font-size: 1rem;
   overflow: scroll;
   overflow-x: hidden;
+  scrollbar-width: none;
 }
+
 
 * {
   box-sizing: border-box;
